# FrankaControlProxy

./: .clang-format  .gitignore  CMakeLists.txt  P10_franka.yaml  P1_arm.yaml  local_test.bash  local_test.yaml
flatbuffers/: message.fbs  service.fbs
include/: FrankaArmProxy.hpp  FrankaProxy.hpp  franka_arm_proxy.hpp  franka_gripper_proxy.hpp
include/control_mode/: abstract_control_mode.hpp  cartesian_pose_mode.hpp  cartesian_postion_mode.hpp  cartesian_velocity_mode.hpp  control_mode.hpp  control_mode_factory.hpp  control_mode_registry.h  human_control_mode.hpp  idle_control_mode.hpp  joint_position_mode.hpp  joint_velocity_mode.hpp  zero_torque_mode.hpp
include/protocol/: byte_order.hpp  codec.hpp  grasp_command.hpp  message_header.hpp  mode_id.hpp  msg_header.hpp  msg_id.hpp  msg_parser.hpp  request_result.hpp
include/utils/: AtomicDoubleBuffer.hpp  ServiceRegistry.hpp  atomic_double_buffer.hpp  franka_config.hpp  logger.hpp  service_registry.hpp  zmq_context.hpp
src/: FrankaArmProxy.cpp  FrankaProxy.cpp  franka_arm_proxy.cpp  main.cpp
src/control_mode/: cartesian_pose_mode.cpp  cartesian_position_mode.cpp  cartesian_velocity_mode.cpp  control_mode_registry.cpp  human_control_mode.cpp  idle_control_mode.cpp  joint_pd_test_mode.cpp  joint_position_mode.cpp  joint_velocity_mode.cpp  zero_torque_mode.cpp
src/debugger/: state_debug.cpp
src/protocol/: codec.cpp  message_header.cpp  msg_header.cpp  msg_parser.cpp  request_result.cpp
